finished validation for phone numbers, now working on mobile input bug

--- a/src/components/sign-up-section/sign-up-section_styles.css
+++ b/src/components/sign-up-section/sign-up-section_styles.css
@@ -21,12 +21,9 @@
     margin: 0.5rem 0.5rem;
     margin-left: 0;
     z-index: -1;
+    cursor:'pointer'
 }
-.google_input:focus {
-    background: #fff;
-    box-shadow: 1px 3px 5px 1px #e1e1e1;
-    border-color: #f1f3f4;
-}
+
 .group {
     display: block;
     margin-top: 20px;
